Reformatted the files

--- a/other-scripts/populate_es.ipynb
+++ b/other-scripts/populate_es.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "02466f47",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
     "import json\n",
     "import random\n",
     "\n",
-    "# --- AWS Setup ---\n",
+    "# AWS Setup\n",
     "dynamodb = boto3.resource('dynamodb')\n",
     "table = dynamodb.Table(\"yelp-restaurants\")\n",
     "\n",
@@ -67,11 +67,11 @@
     "    session_token=credentials.token\n",
     ")\n",
     "\n",
-    "# --- Fetch all restaurants from DynamoDB ---\n",
+    "# Fetch all restaurants from DynamoDB \n",
     "response = table.scan()\n",
     "items = response['Items']\n",
     "\n",
-    "# --- Group restaurants by cuisine ---\n",
+    "# Group restaurants by cuisine\n",
     "cuisine_groups = {}\n",
     "for restaurant in items:\n",
     "    cuisine = restaurant.get('cuisine', '').lower().strip()\n",
@@ -79,10 +79,10 @@
     "        continue\n",
     "    cuisine_groups.setdefault(cuisine, []).append(restaurant)\n",
     "\n",
-    "# --- Pick 5 random cuisines ---\n",
+    "# Pick 5 random cuisines\n",
     "selected_cuisines = random.sample(list(cuisine_groups.keys()), 5)\n",
     "\n",
-    "# --- Pick up to 4 restaurants per cuisine (total 20) ---\n",
+    "# Pick up to 4 restaurants per cuisine (total 20)\n",
     "selected_restaurants = []\n",
     "for cuisine in selected_cuisines:\n",
     "    restaurants = cuisine_groups[cuisine]\n",
@@ -92,7 +92,7 @@
     "print(f\"Selected cuisines: {selected_cuisines}\")\n",
     "print(f\"Total restaurants to index: {len(selected_restaurants)}\")\n",
     "\n",
-    "# --- Index into Elasticsearch ---\n",
+    "# Index into Elasticsearch \n",
     "count = 0\n",
     "for restaurant in selected_restaurants:\n",
     "    doc = {\n",
