--- a/other-scripts/restaurant_extraction.ipynb
+++ b/other-scripts/restaurant_extraction.ipynb
@@ -56,13 +56,9 @@
     "import re\n",
     "import requests\n",
     "import time\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Config\n",
-    "# -----------------------------\n",
     "import os\n",
     "\n",
-    "API_KEY = os.getenv(\"YELP_API_KEY\")  # Fetch the API key from environment variables\n",
+    "API_KEY = os.getenv(\"YELP_API_KEY\")  \n",
     "if not API_KEY:\n",
     "    raise ValueError(\"YELP_API_KEY environment variable is not set.\")\n",
     "\n",
@@ -71,9 +67,6 @@
     "LOCATION = \"Manhattan, NY\"\n",
     "OUTPUT_CSV = \"manhattan_restaurants.csv\"\n",
     "\n",
-    "# -----------------------------\n",
-    "# Functions\n",
-    "# -----------------------------\n",
     "def fetch_restaurants(cuisine, offset):\n",
     "    \"\"\"Fetch a batch of restaurants from Yelp API\"\"\"\n",
     "    url = \"https://api.yelp.com/v3/businesses/search\"\n",
@@ -95,9 +88,7 @@
     "    match = re.search(r'\\b\\d{5}\\b', address)\n",
     "    return match.group(0) if match else \"\"\n",
     "\n",
-    "# -----------------------------\n",
     "# Main Script\n",
-    "# -----------------------------\n",
     "all_data = []\n",
     "seen_ids = set()\n",
     "\n",
@@ -131,7 +122,7 @@
     "                seen_ids.add(b[\"id\"])\n",
     "\n",
     "        offset += 50\n",
-    "        time.sleep(0.3)  # avoid rate limits\n",
+    "        time.sleep(0.3)  # to avoid rate limits\n",
     "\n",
     "    all_data.extend(collected[:200])\n",
     "    print(f\"Collected {len(collected)} {cuisine} restaurants.\")\n",
@@ -139,9 +130,8 @@
     "# Save to CSV\n",
     "df = pd.DataFrame(all_data)\n",
     "df.to_csv(OUTPUT_CSV, index=False)\n",
-    "print(f\"✅ Data saved to {OUTPUT_CSV}\")\n",
+    "print(f\"Data saved to {OUTPUT_CSV}\")\n",
     "\n",
-    "# Optional: show sample\n",
     "print(df[['name', 'cuisine', 'address', 'zip_code']].head())\n"
    ]
   }
